tests/jastadd/negative/type_errors/L2/6_TypeCheckingCaseStmt2.ob
MODULE TestModule;
    VAR i : INTEGER;
BEGIN
    CASE 10+i OF
    1:
    | i+1..2:
    END
END TestModule.
